Fix footer paragraph alignment

--- a/src/assets/styles/components/_project.scss
+++ b/src/assets/styles/components/_project.scss
@@ -12,6 +12,9 @@
     grid-row: 1 / 2;
     grid-column: 1 / 2;
   }
+  &__description &__tags {
+    text-align-last: left;
+  }
   &__title,
   &__tags {
     text-transform: uppercase;
